# go2-backflip-rl

./: .gitignore  README.md  pyproject.toml  reward_overrides.json
docs/: go2_backflip_발표자료.html  go2_backflip_발표자료_v2.html
policy/: policy_soft3.onnx
scripts/: export_mj_onnx.py  mujoco_finetune.py  sim2sim_mujoco.py
scripts/rsl_rl/: capture.py  dump_obs.py  play.py  train.py
source/go2_backflip/go2_backflip/: __init__.py
source/go2_backflip/go2_backflip/tasks/: __init__.py
source/go2_backflip/go2_backflip/tasks/direct/go2_backflip/: __init__.py  go2_backflip_env.py  go2_backflip_env_cfg.py
source/go2_backflip/go2_backflip/tasks/direct/go2_backflip/agents/: rsl_rl_ppo_cfg.py
