[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "go2_backflip"
version = "0.1.0"
description = "Unitree Go2 backflip RL task (IsaacLab external extension)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["source/go2_backflip"]
include = ["go2_backflip*"]
